...
        updateBlock()
        serialInfo = WebDeposit.getSerialInfo()
    }

    val successG = F { s ->
        showButton = true
        if (s == "OK") {
            status = "Succeeded Ok!"
            WebDeposit.setNextTime(endTime + (Constants.HOUR_IN_MS * 3.9).toLong())
            updateBlock()
        } else {
            status = "Failed with message: $s"
        }
...
